# mellow-analysis

./: DASHBOARD_DOCUMENTATION.md  README.md  REPORT_FINAL_SUMMARY.md  REPORT_IMPROVEMENTS.md  analyze_pdf.py  data_validation.py  prompt.txt  pyproject.toml  run_dashboard.py  test_statistical_module.py
.cursor/rules/: clean-code.mdc
data/: rc_invokana_cases.csv  rc_invokana_users_responses_nopersonal_hash.csv
docs/: README.md  dashboard.md
src/mellow_analysis/: __init__.py  cli.py
src/mellow_analysis/data/: __init__.py  loader.py
src/mellow_analysis/reports/: __init__.py  generate_report.py
src/mellow_analysis/streamlit/: __init__.py  dashboard.py
src/mellow_analysis/streamlit/statistical-tests/: __init__.py  two_sample_tests.py  utils.py
src/mellow_analysis/streamlit/statistical_tests/: __init__.py  data_analyzer.py  data_preparation.py  group_builder.py  statistical_engine.py  two_sample_tests.py  utils.py
src/mellow_analysis/streamlit/visualizations/: __init__.py  content_analysis.py  overview_metrics.py  user_progression.py  user_retention.py  user_segments.py
src/mellow_analysis/utils/: __init__.py
